<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateApplication">

    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="0dp"
        android:layout_height="540dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbarStyle="insideOverlay"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:stateListAnimator="@null"
                android:text="Пример заполнения формы"
                android:translationZ="4dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Наименование вашей заявки (лучше указать одну должность - быстрее соберёте команду)"
                android:textColor="#000000"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/name"
                style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/shape"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edittext_hint9"
                android:inputType="textPersonName"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Описание заявки"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/opisanie"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint8"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Цель"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint11"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Навыки, умения"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/can"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint7"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Требуемый опыт работы"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint6"
                android:inputType="numberDecimal"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Хэштеги"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/hashTegs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                android:stateListAnimator="@null"
                android:text="Загрузить изображение - пример вашей работы"
                android:translationZ="4dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Выберите 1 раздел для вашей заявки"
                android:textColor="#000000"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Как выбрать раздел?" />

            <Spinner
                android:id="@+id/razdelProgram"
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:text="  Другой раздел:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint5"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Контакты (один из пунктов ниже обязательно должен быть заполнен):"
                android:textColor="#000000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Телефон (без +7)"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint4"
                android:inputType="phone"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ссылка на аккаунт в ВК"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/vk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint3"
                android:inputType="textPersonName"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Другой способ связи с описанием"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otherContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/edittext_hint2"
                android:inputType="textMultiLine"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="Готово!"
                android:textSize="18sp"
                android:translationZ="4dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/checkbox_on_background" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="Формирование заявки" />

</android.support.constraint.ConstraintLayout>
