<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="#02a7ed"
        android:elevation="4dp"
        android:maxLines="1"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="15dp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:elevation="11dp"
                android:foregroundGravity="left"
                app:cardCornerRadius="4dp"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="12dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="219dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center|start"
                    android:layout_margin="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="#ffffff"
                    android:hint="@string/edittext"
                    android:inputType="text"
                    android:padding="0dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#a1a0a1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.199"
                    tools:scrollY="10dp" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="30dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center|end"
                    android:layout_margin="32dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:translationX="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.859"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center|end"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/desc"
                    android:scrollX="0dp"
                    android:scrollY="0dp"
                    android:scrollbars="vertical"
                    android:src="@drawable/icon"
                    tools:scrollY="0dp"
                    tools:translationX="0dp"
                    tools:translationY="0dp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="45dp"
                    android:layout_height="31dp"
                    android:layout_gravity="bottom|left"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/huray"
                    android:translationX="0dp"
                    android:translationY="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toEndOf="@+id/toolbar2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.695" />

            </android.support.v7.widget.CardView>

        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/buttonSort"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:paddingRight="200dp"
        android:text="@string/buttonSort"
        android:textColor="#000"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/main_tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <android.support.design.widget.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/main_view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSort"
        app:tabMode="scrollable" />

    <android.support.v4.view.ViewPager
        android:id="@+id/main_view_pager"
        app:layout_constraintTop_toBottomOf="@id/main_tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/desc"
        android:elevation="7dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/the_best_imgonline_plus" />
</android.support.constraint.ConstraintLayout>